Provide AggregatedNetconfOperationServiceFactory as a service
We have a blueprint depending on activation of a registry. The registry
itself contains no state, publish it through SCR.

Change-Id: I6d8c88ba30a18e84b8faa586ed865c53532750e0
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>